--- a/src/plugins.config
+++ b/src/plugins.config
@@ -6,7 +6,7 @@
 # Generate the jar file using: "jar cvfM BoneJ_.jar *"
 
 Plugins>Analyze, "Orientation", org.doube.geometry.Orienteer
-Plugins>Analyze, "Particle Analyser", org.doube.bonej.ParticleCounter
+Plugins>Analyze, "Particle Analyser", org.doube.bonej.particleanalyser.ParticleCounter
 
 Plugins>BoneJ, "Analyse Skeleton", org.doube.skeleton.AnalyzeSkeleton
 Plugins>BoneJ, "Anisotropy", org.doube.bonej.Anisotropy
