GeoMorph: rename to LandmarkHelper, because that is what it is

--- a/src/plugins.config
+++ b/src/plugins.config
@@ -25,7 +25,7 @@ Plugins>BoneJ, "Volume Fraction", org.doube.bonej.VolumeFraction
 Plugins>BoneJ, "-"
 Plugins>BoneJ, "Fit Ellipsoid", org.doube.bonej.EllipsoidFitter
 Plugins>BoneJ, "Fit Sphere", org.doube.bonej.SphereFitter
-Plugins>BoneJ, "Geometric Morphometrics", org.doube.bonej.GeometricMorphometrics
+Plugins>BoneJ, "Landmark Helper", org.doube.bonej.LandmarkHelper
 Plugins>BoneJ, "Moments of Inertia", org.doube.bonej.Moments
 Plugins>BoneJ, "Neck Shaft Angle", org.doube.bonej.NeckShaftAngle
 Plugins>BoneJ, "Slice Geometry", org.doube.bonej.SliceGeometry
