--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
     <artifactId>imglib2</artifactId>
     <version>2.0-SNAPSHOT</version>
   </dependency>
+  <dependency>
+  <groupId>jama</groupId>
+  <artifactId>jama</artifactId>
+  <version>1.0.2</version>
+</dependency>
   </dependencies>
 <parent>
   <groupId>org.scijava</groupId>
