--- a/pom.xml
+++ b/pom.xml
@@ -1,84 +1,85 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.bonej</groupId>
-  <artifactId>BoneJ</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-  <dependency>
-    <groupId>net.imagej</groupId>
-    <artifactId>ij</artifactId>
-    <version>1.46j</version>
-  </dependency>
-  <dependency>
-  	<groupId>imagej</groupId>
-    <artifactId>imagej</artifactId>
-    <version>2.0-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  	<groupId>imagej</groupId>
-    <artifactId>ij-ext</artifactId>
-    <version>2.0-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  	<groupId>net.imagej</groupId>
-    <artifactId>ij-platform</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  	<groupId>net.imagej</groupId>
-    <artifactId>ij-data</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  	<groupId>net.imglib2</groupId>
-    <artifactId>imglib2</artifactId>
-    <version>2.0-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  <groupId>jama</groupId>
-  <artifactId>jama</artifactId>
-  <version>1.0.2</version>
-</dependency>
-  </dependencies>
-<parent>
-  <groupId>org.scijava</groupId>
-  <artifactId>pom-scijava</artifactId>
-  <version>1.15</version>
-</parent>
- 
-<!-- NB: for project parent -->
-<repositories>
-  <repository>
-    <id>imagej.releases</id>
-    <url>http://maven.imagej.net/content/repositories/releases</url>
-  </repository>
-  <repository>
-    <id>imagej.snapshots</id>
-    <url>http://maven.imagej.net/content/repositories/snapshots</url>
-  </repository>
-</repositories>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.bonej</groupId>
+	<artifactId>BoneJ</artifactId>
+	<version>2.0.0-SNAPSHOT</version>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<resources>
+			<resource>
+				<directory>src</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source />
+					<target />
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij</artifactId>
+			<version>1.46j</version>
+		</dependency>
+		<dependency>
+			<groupId>imagej</groupId>
+			<artifactId>imagej</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>imagej</groupId>
+			<artifactId>ij-ext</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij-platform</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij-data</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jama</groupId>
+			<artifactId>jama</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+	</dependencies>
+	<parent>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>1.15</version>
+	</parent>
+
+	<!-- NB: for project parent -->
+	<repositories>
+		<repository>
+			<id>imagej.releases</id>
+			<url>http://maven.imagej.net/content/repositories/releases</url>
+		</repository>
+		<repository>
+			<id>imagej.snapshots</id>
+			<url>http://maven.imagej.net/content/repositories/snapshots</url>
+		</repository>
+	</repositories>
 	<name>BoneJ</name>
 	<url>http://bonej.org/</url>
 	<description>BoneJ is an ImageJ plugin for bone image analysis.</description>
