--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 		</dependency>
 		<dependency>
 			<groupId>java3d</groupId>
+			<artifactId>j3d-core-utils</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>java3d</groupId>
 			<artifactId>vecmath</artifactId>
 			<version>1.5.2</version>
 		</dependency>
