Build: start again in new Eclipse project
Idea is to work on BoneJ1 in one project with Ant builder, jar
dependencies etc set up. In another project, work on the bonej2 branch
of the bonej Git repository, with Maven handling dependencies. This way
the code tree can stay in one piece but the two build styles are
separated.

--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
 			<version>1.46j</version>
 		</dependency>
 		<dependency>
-			<groupId>imagej</groupId>
-			<artifactId>imagej</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij-core</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>imagej</groupId>
