--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>imagej</groupId>
+			<groupId>net.imagej</groupId>
 			<artifactId>ij-ext</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
