--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
+			<artifactId>ij-ui</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
 			<artifactId>ij-ext</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
@@ -103,4 +108,21 @@
 		<name>Skeletal Biology, The Royal Veterinary College</name>
 		<url>http://rvc.ac.uk/</url>
 	</organization>
+	<profiles>
+		<profile>
+			<id>eclipse</id>
+			<activation>
+				<property>
+					<name>m2e.version</name>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>net.java.sezpoz</groupId>
+					<artifactId>sezpoz</artifactId>
+					<version>${sezpoz.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
